crates/oxc_angular_compiler/tests/snapshots/integration_test__for_inside_if.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _forTrack0 = ($index,$item) =>$item.id;
function TestComponent_Conditional_0_For_2_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2);
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
  if ((rf & 2)) {
    const item_r1 = ctx.$implicit;
    i0.ɵɵadvance(2);
    i0.ɵɵtextInterpolate(item_r1.name);
  }
}
function TestComponent_Conditional_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵrepeaterCreate(1,TestComponent_Conditional_0_For_2_Template,4,1,null,null,
        _forTrack0);
  }
  if ((rf & 2)) {
    const ctx_r1 = i0.ɵɵnextContext();
    i0.ɵɵadvance();
    i0.ɵɵrepeater(ctx_r1.items);
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵconditionalCreate(0,TestComponent_Conditional_0_Template,3,0); }
  if ((rf & 2)) { i0.ɵɵconditional((ctx.showItems? 0: -1)); }
}
