crates/oxc_angular_compiler/tests/snapshots/integration_test__if_else_block_with_different_classes.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Conditional_0_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div",0);
    i0.ɵɵtext(2,"True");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_Conditional_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div",1);
    i0.ɵɵtext(2,"False");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵconditionalCreate(0,TestComponent_Conditional_0_Template,4,0)(1,
      TestComponent_Conditional_1_Template,4,0); }
  if ((rf & 2)) { i0.ɵɵconditional((ctx.condition? 0: 1)); }
}
